--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,11 @@ background-color: rgb(248, 96, 96);
 border: 2px solid rgb(255, 255, 255);
 }
 
+figure{
+position: relative;
+}
+    
+
 /*Imagem do efeito de fade*/
 .efect
 {
